--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,10 +4,12 @@
 
 @layer base {
   * {
-    @apply border-border;
+     @apply border; /* appliquera border-width: 1px et border-style: solid */
+    border-color: hsl(var(--border));
   }
   body {
-    @apply bg-background text-foreground;
+     background-color: hsl(var(--background));
+  color: hsl(var(--foreground));
   }
 }
 
